# armai

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml  schema.json
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/data/: initial_data.sql  insert_data.sql  triggers.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/application/dto/armfights/: armfightCreateCommand.hpp  armfightQuery.hpp  armfightWinCommand.hpp
src/application/dto/categories/: categoryCreateCommand.hpp  categoryQuery.hpp
src/application/dto/categorySchemas/: categorySchemaCreateCommand.hpp  categorySchemaMulQuery.hpp  categorySchemaQuery.hpp
src/application/dto/competitions/: competitionCreateCommand.hpp  competitionMulQuery.hpp  competitionQuery.hpp
src/application/dto/participants/: participantRegisterCommand.hpp  participantWeighingCommand.hpp
src/application/dto/teams/: teamCreateCommand.hpp  teamMulQuery.hpp  teamQuery.hpp
src/application/dto/users/: userAuthCommand.hpp  userQuery.hpp  userRegisterCommand.hpp
src/application/handlers/: appendHandlers.cpp  appendHandlers.hpp
src/application/handlers/category_schemas/: view.cpp  view.hpp
src/application/handlers/competitions/: view.cpp  view.hpp
src/application/handlers/teams/: view.cpp  view.hpp
src/application/mappers/armfights/: dto.cpp  dto.hpp  json.cpp  json.hpp  request.cpp  request.hpp
src/application/mappers/categories/: dto.cpp  dto.hpp  json.cpp  json.hpp
src/application/mappers/categorySchemas/: dto.cpp  dto.hpp  json.cpp  json.hpp
src/application/mappers/competitions/: dto.cpp  dto.hpp  json.cpp  json.hpp  request.cpp  request.hpp
src/application/mappers/participants/: request.cpp  request.hpp
src/application/mappers/teams/: dto.cpp  dto.hpp  json.cpp  json.hpp  request.cpp  request.hpp
src/application/mappers/users/: dto.cpp  dto.hpp  json.cpp  json.hpp  request.cpp  request.hpp  requestToUserRegisterCommand.cpp  requestToUserRegisterCommand.hpp  userDomainQuery.cpp  userDomainQuery.hpp
src/application/utils/: auth.cpp  auth.hpp  categorySchemas.cpp  categorySchemas.hpp  competitions.cpp  competitions.hpp  teams.cpp  teams.hpp
src/domain/: domain.cpp  domain.hpp
src/domain/armfights/: armfight.hpp
src/domain/categories/: category.hpp
src/domain/categorySchemas/: categorySchema.hpp  categorySchemas.cpp  categorySchemas.hpp
src/domain/competitions/: competition.hpp  competitions.cpp  competitions.hpp
src/domain/participants/: participant.hpp  participantAsUser.hpp
src/domain/teams/: participant.hpp  team.hpp
src/domain/users/: user.hpp  users.hpp
src/domain/utils/: auth.cpp  auth.hpp  jwt.cpp  jwt.hpp
src/infrastructure/components/repositories/: appendRepositories.cpp  appendRepositories.hpp  armfightRepositoryComponent.cpp  armfightRepositoryComponent.hpp  categoryRepositoryComponent.cpp  categoryRepositoryComponent.hpp  categorySchemaRepositoryComponent.cpp  categorySchemaRepositoryComponent.hpp  competitionRepositoryComponent.cpp  competitionRepositoryComponent.hpp  participantRepositoryComponent.cpp  participantRepositoryComponent.hpp  teamRepositoryComponent.cpp  teamRepositoryComponent.hpp  userRepositoryComponent.cpp  userRepositoryComponent.hpp
src/infrastructure/mappers/armfights/: parameterStore.cpp  parameterStore.hpp
src/infrastructure/mappers/categories/: parameterStore.cpp  parameterStore.hpp
src/infrastructure/mappers/categorySchemas/: parameterStore.cpp  parameterStore.hpp
src/infrastructure/mappers/competitions/: parameterStore.cpp  parameterStore.hpp
src/infrastructure/mappers/participants/: parameterStore.cpp  parameterStore.hpp
src/infrastructure/mappers/postgres/: hand.hpp  sex.hpp  status.hpp
src/infrastructure/mappers/teams/: parameterStore.cpp  parameterStore.hpp
src/infrastructure/mappers/users/: parameterStore.cpp  parameterStore.hpp
src/infrastructure/queries/armfights/: armfightsCreate.hpp  armfightsRead.hpp  armfightsUpdate.hpp
src/infrastructure/queries/categories/: categoriesCreate.hpp  categoriesRead.hpp
src/infrastructure/queries/categorySchemas/: categorySchemasCreate.hpp  categorySchemasRead.hpp
src/infrastructure/queries/competitions/: competitionsCreate.hpp  competitionsRead.hpp  competitionsUpdate.hpp
src/infrastructure/queries/participants/: participantsCreate.hpp  participantsDelete.hpp  participantsRead.hpp  participantsUpdate.hpp
src/infrastructure/queries/teams/: teamsCreate.hpp  teamsRead.hpp
src/infrastructure/queries/users/: usersCreate.hpp  usersRead.hpp
src/infrastructure/repositories/teams/: teamRepository.cpp  (+3 more)
static/: auth.html  categorySchemas.html  competitions.html  index.html  logout.html  me.html  reg.html  teams.html  users_id.html
static/categorySchemas/: create.html  id.html
static/competitions_/: category.html  create.html  id.html  register.html
static/css/: form.css  index.css  main.css
static/css/categorySchemas/: create.css
static/css/competitions/: main.css
static/js/: auth.js  index.js  logout.js  me.js  redirectAuth.js  redirectNotAuth.js  reg.js
static/js/categorySchemas/: create.js  id.js  index.js
static/js/competitions/: category.js  create.js  id.js  index.js  register.js
static/js/teams/: create.js  id.js  index.js
static/js/users/: id.js
static/teams_/: create.html  id.html
static/users_/: id.html
(+74 files in other folders)
